NEW: save output

--- a/notebooks/covid-analysis.ipynb
+++ b/notebooks/covid-analysis.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d056138c",
+   "id": "6d85fac7",
    "metadata": {},
    "source": [
-    "### Tutorial: Protein Sequence Analysis of COVID-19 using BioPython \n",
+    "## Tutorial: Protein Sequence Analysis of COVID-19 using BioPython \n",
     "(https://www.youtube.com/watch?v=dxVKG2gNSos + my additions)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "13a0935f",
+   "id": "f9c0b8dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28861618",
+   "id": "dafcd8ec",
    "metadata": {},
    "source": [
-    "### Load file"
+    "### Read/write file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6d421616",
+   "id": "9e7bd5fa",
    "metadata": {},
    "outputs": [
     {
@@ -59,8 +59,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a455be2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SeqIO.write(record, \"../data/covid-sequence-output.fasta\", \"fasta\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "96efbfd3",
+   "id": "4f4a8a92",
    "metadata": {},
    "source": [
     "### Analysis"
@@ -69,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2151a3d4",
+   "id": "6393d063",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "06174499",
+   "id": "a1e92d4a",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a4acad65",
+   "id": "ef54eaf7",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ef46968e",
+   "id": "6bb4baf6",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1573786c",
+   "id": "3991e4d0",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "809e2298",
+   "id": "ba40fead",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0e5566c2",
+   "id": "58d7c1ed",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "105988e9",
+   "id": "bfcd3729",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f67ee353",
+   "id": "f1ff86a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8eb661ba",
+   "id": "0c1fed77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a6a02145",
+   "id": "11c59c0e",
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b5dde4f3",
+   "id": "e3592138",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e52964c0",
+   "id": "a355ed7b",
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "843508dd",
+   "id": "9e08b7ea",
    "metadata": {},
    "outputs": [
     {
@@ -1124,8 +1145,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b1b651c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "8e5bb45b",
+   "id": "600a9560",
    "metadata": {},
    "source": [
     "## 3D structure of COVID\n",
@@ -1151,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "293aa0fa",
+   "id": "1a11499f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6abfc201",
+   "id": "9a0b4419",
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bb6ad439",
+   "id": "52d73f01",
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72afaab9",
+   "id": "7203a1d8",
    "metadata": {},
    "outputs": [],
    "source": []
